# ainput

./: .gitea-projection.json  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  MISTAKEBOOK.md  OPLOG.md  PLAN.md  README.md  SPEC.md  TASKLIST.md  WORKFLOW.md  run-ainput.bat  run-latest.bat
apps/ainput-desktop/: Cargo.toml  build.rs
apps/ainput-desktop/src/: acceptance.rs  ai_rewrite.rs  hotkey.rs  instance.rs  main.rs  maintenance.rs  overlay.rs  screenshot.rs  streaming_fixtures.rs  streaming_state.rs  worker.rs
config/: ainput.config.json  ainput.toml  hud-overlay.toml
crates/ainput-asr/: Cargo.toml
crates/ainput-asr/src/: lib.rs
crates/ainput-audio/: Cargo.toml
crates/ainput-audio/src/: lib.rs
crates/ainput-automation/: Cargo.toml
crates/ainput-automation/src/: lib.rs
crates/ainput-data/: Cargo.toml
crates/ainput-data/src/: lib.rs
crates/ainput-output/: Cargo.toml
crates/ainput-output/src/: lib.rs
crates/ainput-recording/: Cargo.toml
crates/ainput-recording/src/: audio.rs  ffmpeg.rs  lib.rs  selection.rs
crates/ainput-rewrite/: Cargo.toml
crates/ainput-rewrite/src/: lib.rs
crates/ainput-shell/: Cargo.toml
crates/ainput-shell/src/: lib.rs
data/prompts/: builtin_prompts.json
data/scenarios/: scenarios.json
data/terms/: base_terms.json  parakeet_code_switch_terms.json
fixtures/streaming-hud-e2e/: manifest.json
fixtures/streaming-selftest/: manifest.json
fixtures/streaming-user-regression-v12/: manifest.json
scripts/: build-installer.ps1  generate-streaming-fixtures.ps1  install-ainput.ps1  live-streaming-acceptance.ps1  package-release.ps1  prune-artifacts.ps1  readme_closeout_guard.py  run-mixed-terms-baseline.ps1  run-online-code-switch-replay.ps1  run-startup-idle-acceptance.ps1  run-streaming-full-audit.ps1  run-streaming-latency-benchmark.ps1  run-streaming-live-e2e.ps1  run-streaming-raw-corpus.ps1  run-streaming-selftest.ps1  streaming-regression.ps1  uninstall-ainput.ps1
sidecars/: nvidia_parakeet_online_sidecar.py  parakeet_code_switch_terms.json
specs/ainput-online-parakeet-multilingual-preview77/: PLAN.md  SPEC.md
specs/ainput-online-parakeet-preview74/: PLAN.md  SPEC.md
specs/ainput-online-parakeet-preview78/: PLAN.md  SPEC.md
specs/ainput-online-parakeet-realtime-preview75/: PLAN.md  SPEC.md
specs/ainput-online-streaming-preview76/: PLAN.md  SPEC.md
specs/hud-microstream-smoothing/: PLAN.md  SPEC.md
specs/post-commit-ai-rewrite-preview84/: PLAN.md  SPEC.md
specs/preview5-streaming-optimization/: PLAN.md  SPEC.md
specs/preview68-latency-and-artifact-prune/: PLAN.md  SPEC.md
specs/preview69-qwen-fast-commit-punctuation-rewrite/: PLAN.md  SPEC.md
specs/preview72-qwen-context-echo-guard/: PLAN.md  SPEC.md
specs/preview79-parakeet-zhcn-codeswitch/: PLAN.md  SPEC.md
specs/preview80-parakeet-safe-codeswitch/: PLAN.md  SPEC.md
specs/preview82-user-voice-corpus/: PLAN.md  SPEC.md
specs/preview83-code-switch-8of10/: PLAN.md  SPEC.md
specs/streaming-ai-rewrite-v16/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-duplicate-final-merge-v5/: PLAN.md  SPEC.md  TASKLIST.md
specs/streaming-final-repair-budget-v7/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-final-tail-insert-overlap-v18/: PLAN.md  SPEC.md
specs/streaming-first-partial-latency-v14/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-full-bug-audit-v13/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-ghost-yeah-v9/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-hud-ai-rewrite/: PLAN.md  SPEC.md
specs/streaming-hud-realtime-latency-v8/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-hud-truth-single-chain-v19/: PLAN.md  SPEC.md
specs/streaming-hud-truth-source-v11/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-latency-model-sweep-v6/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-live-e2e-acceptance/: PLAN.md  REVIEW.md  SPEC.md  TASKLIST.md
specs/streaming-offline-final-garbled-tail-v15/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-output-foundation-v4/: PLAN.md  SPEC.md  TASKLIST.md
specs/streaming-qwen3-sidecar-preview55/: PLAN.md  SPEC.md
specs/streaming-realtime-rewrite-v3/: PLAN.md  REVIEW.md  SPEC.md  TASKLIST.md
specs/streaming-smooth-latency-v20/: PLAN.md  SPEC.md
specs/streaming-tail-artifact-punctuation-v12/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-tail-overlap-dedup-v10/: PLAN.md  RESULTS.md  SPEC.md  TASKLIST.md
specs/streaming-worker-v2/: PLAN.md  SPEC.md
specs/tray-sticky-error-v17/: PLAN.md  SPEC.md  TASKLIST.md
tools/: fake-revision-notepad-test.ps1
