[package]
name = "ainput-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo = "0.37.2"
ainput-shell = { path = "../../crates/ainput-shell" }
ainput-audio = { path = "../../crates/ainput-audio" }
ainput-asr = { path = "../../crates/ainput-asr" }
ainput-rewrite = { path = "../../crates/ainput-rewrite" }
ainput-output = { path = "../../crates/ainput-output" }
tray-icon = "0.21.3"
winit = "0.30.12"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1"
