[package]
name = "ainput-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
arboard = "3.6.1"
image = { version = "0.25.6", default-features = false, features = ["png"] }
hound = "3.5.1"
ainput-shell = { path = "../../crates/ainput-shell" }
ainput-audio = { path = "../../crates/ainput-audio" }
ainput-asr = { path = "../../crates/ainput-asr" }
ainput-data = { path = "../../crates/ainput-data" }
ainput-rewrite = { path = "../../crates/ainput-rewrite" }
ainput-output = { path = "../../crates/ainput-output" }
ainput-automation = { path = "../../crates/ainput-automation" }
ainput-recording = { path = "../../crates/ainput-recording" }
tray-icon = "0.21.3"
winit = "0.30.12"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1"
